tests/baselines/reference/importEquals2.errors.txt
/b.ts(2,1): error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
/c.ts(1,1): error TS1202: Import assignment cannot be used when targeting ECMAScript modules. Consider using 'import * as ns from "mod"', 'import {a} from "mod"', 'import d from "mod"', or another module format instead.
/c.ts(2,7): error TS2339: Property 'A' does not exist on type 'typeof import("/a")'.


==== /c.ts (2 errors) ====
    import a = require('./b');
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1202: Import assignment cannot be used when targeting ECMAScript modules. Consider using 'import * as ns from "mod"', 'import {a} from "mod"', 'import d from "mod"', or another module format instead.
    new a.A(); // Error
          ~
!!! error TS2339: Property 'A' does not exist on type 'typeof import("/a")'.
    
==== /a.ts (0 errors) ====
    class A {}
    export type { A }
    
==== /b.ts (1 errors) ====
    import * as a from './a';
    export = a;
    ~~~~~~~~~~~
!!! error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
    